css/style.css
html,
body {
  margin: 0px;
  height: 100%;
  font-family: sans-serif;
  min-width: 250px;
  background: linear-gradient(to bottom, #264371, #152a4b);
  overflow: scroll;
}

* {
  box-sizing: border-box;
}

main {
  overflow: auto;
  position: relative;
  min-height: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  overflow-x: hidden;
  padding: 25px 0px;
}

h1,
h2 {
  text-align: center;
  color: #f0f0f0;
}

h1 {
  margin: 25px 0px 5px 0px;
}

h2 {
  margin: 0px;
}

a {
  color: #f0f0f0;
  /* text-decoration: none; */
}

a:hover {
  color: #ccc;
}

p {
  max-width: 800px;
  text-align: center;
  font-size: 1.2em;
  font-weight: lighter;
  color: #f0f0f0;
}

.xrva-logo {
  background-image: url("../img/xrva-full-logo-white.png");
  width: 100%;
  height: calc(627px / 2.5);
  width: calc(1600px / 2.5);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

@media (max-width: 800px) {
  main {
    justify-content: initial;
    padding: 25px;
  }
  h1 {
    font-size: 1.5em;
    margin-bottom: 5px;
  }
  h2 {
    font-size: 1.2em;
    margin-bottom: 15px;
  }
  p {
    font-size: 1em;
  }
  .xrva-logo {
    width: 400px;
    background-size: 100%;
    height: 200px;
    text-align: center;
  }
  .xrva-logo img {
    width: 80%;
  }
}

@media (max-width: 450px) {
  .xrva-logo {
    width: 200px;
    height: 100px;
  }
}

